# cloud-segment

./: .gitignore  CMakeLists.txt  README.md  readme.md
include/: cylinder.h  euclidean_cluster.h  line_fit_ground_segmentation.h  linefit_ground_segmentation.h  patchworkpp.h  point_type.h  ray_ground_filter.h  ring_ground_filter.h
linefit_ground_segmentation/: README.md
patchworkpp/: README.md
src/: cylinder.cpp  euclidean_cluster.cpp  line_fit_ground_segmentation.cpp  linefit_ground_segmentation.cpp  patchworkpp.cpp  ray_ground_filter.cpp  ring_ground_filter.cpp
test/: cylinder_test.cpp  euclidean_cluster_node.cpp  line_fit_ground_segmentation_test.cpp  linefit_ground_segmentation_node.cpp  patchworkpp_node.cpp  patchworkpp_test.cpp  ray_ground_filter_node.cpp  ring_ground_filter_node.cpp  ring_ground_filter_test.cpp
